Added event to show last gnerated time

--- a/index.html
+++ b/index.html
@@ -25,18 +25,19 @@
             <div class="ui fluid card red">
                 <div class="content">
                     <div class="header">Today's Random Quote</div>
-                    <div class="meta">Last generated: </div><span id="last-gnerated">Some date...</span>
+                    <div class="meta">Last generated: <span id="last-gnerated"></span></div>
                     <br/>
                     <div class="description">
                         <i class="big quote left icon"></i> Some quote...
                     </div>
                 </div>
-                <div class="ui bottom attached button">
+                <div class="ui bottom attached button" id="new-message">
                     <i class="add icon"></i> New Quote
                 </div>
             </div>
         </div>
     </div>
+    <script src="bower_components/moment/min/moment.min.js"></script>
     <script src="scripts.js"></script>
 </body>
 
