added api call for new quote

--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
                     <div class="meta">Last generated: <span id="last-gnerated"></span></div>
                     <br/>
                     <div class="description">
-                        <i class="big quote left icon"></i> Some quote...
+                        <i class="big quote left icon"></i> <span id="message">Some quote...</span>
                     </div>
                 </div>
                 <div class="ui bottom attached button" id="new-message">
