--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <meta name="description" content="The HTML5 Herald">
     <meta name="author" content="SitePoint">
     <link rel="stylesheet" type="text/css" href="bower_components/semantic/dist/semantic.min.css">
-    <link rel="stylesheet" type="text/css" href="styles.css">
+    <link rel="stylesheet" type="text/css" href="./src/styles.css">
     <script src="bower_components/jquery/dist/jquery.min.js"></script>
     <script src="bower_components/semantic/dist/semantic.min.js"></script>
 
@@ -38,7 +38,7 @@
         </div>
     </div>
     <script src="bower_components/moment/min/moment.min.js"></script>
-    <script src="scripts.js"></script>
+    <script src="./src/scripts.js"></script>
 </body>
 
 </html>
